--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.20",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
